# coarsened_periodogram

./: README.md  pyproject.toml
src/coarsened_periodogram/: periodogram.py  types.py
tests/: conftest.py
